--- a/03.07.md
+++ b/03.07.md
@@ -67,7 +67,6 @@ void createRoutine_2_2(int idRoutine, String description, bool isAllWeek,
   ## Atividade 03
 ```dart
 
-
 void createRoutine_1_3(int idRoutine, String description, bool isAllWeek,
     {bool sun = false,
     mon = false,
@@ -92,5 +91,40 @@ void createRoutine_2_3(
 void createDate_1_3({int mounth = 0, int day = 0, int year = 2024}) {
   print('$year/$mounth/$day');
 }
+```
 
+  ## Atividade 04
+```dart
+
+double calculateWater_1_4(
+    double waterYesterday,
+    double waterToday,
+    double waterGoal,
+    Function(double, double, double) calculateWaterTomorrow) {
+      var waterTomorrow =
+      calculateWaterTomorrow(waterYesterday, waterToday, waterGoal);
+      return waterTomorrow;
+    }
+
+double calculateWaterTomorrow_1_4(double x, double y, double goal) {
+  return (goal * 3) - (x + y);
+}
+```
+
+  ## Atividade 05
+```dart
+void main() {
+  calculateWater_1_5(
+    0.8, 1.2, 0.3,
+    (double y, double t, double goal) => ((goal * 3) - (t + y))
+  );
+}
+
+double calculateWater_1_4(double waterYesterday,
+    double waterToday,
+    double waterGoal,
+    Function(double, double, double) calculateWaterTomorrow) {
+      var waterTomorrow = calculateWaterTomorrow(waterYesterday, waterToday, waterGoal);
+      return waterTomorrow;
+    }
 ```
