--- a/03.07.md
+++ b/03.07.md
@@ -101,8 +101,7 @@ double calculateWater_1_4(
     double waterToday,
     double waterGoal,
     Function(double, double, double) calculateWaterTomorrow) {
-      var waterTomorrow =
-      calculateWaterTomorrow(waterYesterday, waterToday, waterGoal);
+      var waterTomorrow = calculateWaterTomorrow(waterYesterday, waterToday, waterGoal);
       return waterTomorrow;
     }
 
@@ -120,7 +119,8 @@ void main() {
   );
 }
 
-double calculateWater_1_5(double waterYesterday,
+double calculateWater_1_5(
+    double waterYesterday,
     double waterToday,
     double waterGoal,
     Function(double, double, double) calculateWaterTomorrow) {
