Update [24.01] Aula 03.07.md

--- a/[24.01] Aula 03.07.md
+++ b/[24.01] Aula 03.07.md
@@ -1,5 +1,7 @@
-# Aula 03-07
+# [24.01] Aula 07.11
+  ## Aula
 ```dart
+
 void main(List<String> args) {
   funcao(5, 'dart');
   print('o aluno está ${ehAprovado(6, 5.9, 6, 6)}');
