Update [24.01] Aula 02.29.md

--- a/[24.01] Aula 02.29.md
+++ b/[24.01] Aula 02.29.md
@@ -1,7 +1,10 @@
+# [24.01] Aula 02.29
+## Introdução Dart/ Flutter
+
 ```dart
+
 import 'dart:io';
 
-/*
 void main() {
 
   print('Digite seu nome: ');
@@ -13,14 +16,16 @@ void main() {
 
   print('$nome possui $idade anos!');
 }
-*/
+```
 
-//flutter pub get
-//fluter pub clean
+## Atividade 1
+### Verificar Aprovação 
+```dart
 
-// Atividade 1 //
+import 'dart:io';
 
-/*
+void main() {
+
   print('Informe sua primeira Nota:');
   var entradaNota1 = stdin.readLineSync()!;
   var nota1 = int.parse(entradaNota1);
@@ -32,10 +37,12 @@ void main() {
   var media = (nota1 + nota2) / 2;
 
   print('Sua média é $media. Você está ${media >= 6 ? 'aprovado!' : 'reprovado!'}');
-*/
+}
+```
 
-// Separada por Funções //
-// Separada Tecnologia e Regra de Negócio //
+## Atividade 2
+### Verificar Aprovação [funções]
+```dart
 
 void main() {
   int count = 0;
