Update [24.02] Aula 08.15.md

--- a/[24.02] Aula 08.15.md
+++ b/[24.02] Aula 08.15.md
@@ -1,5 +1,5 @@
 # [24.02] Aula 08.15
-  ## Verificação de CPF Válido
+  ## Sistema para Gestão de Notas
 
   ### cpf { lib\dominio\cpf.dart }
 ```dart
