Update [24.02] Aula 09.05.md

--- a/[24.02] Aula 09.05.md
+++ b/[24.02] Aula 09.05.md
@@ -1,5 +1,5 @@
 # [24.02] Aula 09.05
-  ### Main (await)
+  ### Main ( await )
 ```dart
 
 main() async {
@@ -16,7 +16,7 @@ setColor() async { await searchData(); print('Set Color');}
 searchData() async { await Future.delayed(Duration(seconds: 3), (){ print('Load Data');});}
 ```
 
-  ### Main (then)
+  ### Main ( then )
 ```dart
 
 main() async {
@@ -35,19 +35,121 @@ searchData() async { await Future.delayed(Duration(seconds: 3), (){ print('Load 
 
   ## Sistema para Gestão de Notas
 
-  ###  {  }
+  ### dto_professor { lib\app\dominio\dto\dto_professor.dart }
 ```dart
 
+class DTOProfessor {
 
+  //Attributes
+  dynamic? id;
+  final String nome;
+  final String? descricao;
+  final String CPF;
+  final String status;
+
+  //Methods
+  DTOProfessor({this.id, required this.nome, this.descricao, required this.CPF, this.status = 'A'});
+}
 ```
 
-  ###  {  }
+  ### i_dao_professor { lib\app\dominio\interface\i_dao_professor.dart }
 ```dart
 
+import 'package:gestao_notas/app/dominio/dto/dto_professor.dart';
 
+abstract class IDAOProfessor {
+
+  //Methods
+  DTOProfessor salvar(DTOProfessor dto);
+  DTOProfessor alterarStatus(DTOProfessor dto);
+}
 ```
 
-  ###  {  }
+  ### professor { lib\app\dominio\professor.dart }
+```dart
+
+import 'package:gestao_notas/app/dominio/interface/i_dao_professor.dart';
+import 'package:gestao_notas/app/dominio/dto/dto_professor.dart';
+
+import 'package:gestao_notas/app/dominio/cpf.dart' as validador;
+
+class Professor {
+
+  //Attributes
+  late dynamic? id;
+  late String nome;
+  late String? descricao;
+  late String CPF;
+  String _status = 'A';
+
+  late DTOProfessor dto;
+  IDAOProfessor dao;
+  
+  //Methods
+  Professor({this.id, required this.nome, this.descricao, required this.CPF, required String status, required this.dao}){
+
+    nome = dto.nome;
+    eNomeNaoVazio();
+
+    descricao = dto.descricao;
+    validador.CPF(CPF);
+
+    this.status = status;
+
+    id = dto.id;
+    dto = DTOProfessor(id: this.id, nome: this.nome,  descricao: this.descricao, CPF: this.CPF, status: this.status);
+  }
+
+  bool eNomeNaoVazio(){ if(nome.isEmpty) throw Exception('Nome não pode ser vazio!'); return true;}
+
+  Future<DTOProfessor> incluir() async { return await dao.salvar(dto);}
+  
+  bool excluir(DTOProfessor dto){ dao.alterarStatus(dto); return true;}
+
+  //GETters && SETters
+  String get status => _status;
+  set status(String status){ if(status != 'A' || status != 'I') throw Exception('Status deve ser "A" ou "I".'); _status = status;} 
+}
+```
+
+  ### script { lib\app\banco\scirpt.dart }
+```dart
+
+const criarTabelas = [
+  '''
+  CREATE TABLE professor (
+
+    id INT NOT NULL,
+    nome VARCHAR(200) NOT NULL,
+    descricao VARCHAR(200),
+    cpf CHAR(14) NOT NULL UNIQUE,
+    status CHAR(1) NOT NULL
+  );
+  '''
+];
+
+const inserirRegistros = [
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Joaquim", "279.654.490-72", "A")',
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Júlia", "143.256.280-02, "A")',
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Mariana", "161.201.410-06", "I")'
+];
+```
+
+  ### script_test.dart { test\banco\script_test.dart }
+```dart
+
+import 'package:flutter_test/flutter_test.dart';
+
+void main() {
+
+  test('Teste Script', (){
+
+    
+  });  
+}
+```
+
+  ### .. { . }
 ```dart
 
 
