Update [24.02] Aula 09.05.md

--- a/[24.02] Aula 09.05.md
+++ b/[24.02] Aula 09.05.md
@@ -129,9 +129,10 @@ const criarTabelas = [
 ];
 
 const inserirRegistros = [
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Joaquim", "279.654.490-72", "A")',
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Júlia", "143.256.280-02, "A")',
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Mariana", "161.201.410-06", "I")'
+
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Joaquim", "279.654.490-72", "A");',
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Júlia", "143.256.280-02, "A");',
+  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Mariana", "161.201.410-06", "I");'
 ];
 ```
 
@@ -140,11 +141,21 @@ const inserirRegistros = [
 
 import 'package:flutter_test/flutter_test.dart';
 
-void main() {
+import 'package:sqflite_common_ffi/sqflite_ffi.dart';
+import 'package:gestao_notas/app/banco/scirpt.dart';
 
-  test('Teste Script', (){
+void main() async {
 
-    
+  setUpAll ((){
+
+    databaseFactory = databaseFactoryFfi;
+    sqfliteFfiInit();
+  });
+
+  test('Teste Script - Criar Tabela', () async {
+
+    var db = await openDatabase(inMemoryDatabasePath);
+    expect(() => criarTabelas.forEach(db.execute), returnsNormally);
   });  
 }
 ```
