Update [24.02] Aula 09.05.md

--- a/[24.02] Aula 09.05.md
+++ b/[24.02] Aula 09.05.md
@@ -60,8 +60,8 @@ import 'package:gestao_notas/app/dominio/dto/dto_professor.dart';
 abstract class IDAOProfessor {
 
   //Methods
-  DTOProfessor salvar(DTOProfessor dto);
-  DTOProfessor alterarStatus(DTOProfessor dto);
+  Future<DTOProfessor> salvar(DTOProfessor dto);
+  Future<DTOProfessor> alterarStatus(DTOProfessor dto);
 }
 ```
 
@@ -119,7 +119,7 @@ const criarTabelas = [
   '''
   CREATE TABLE professor (
 
-    id INT NOT NULL,
+    id INTEGER NOT NULL PRIMARY KEY,
     nome VARCHAR(200) NOT NULL,
     descricao VARCHAR(200),
     cpf CHAR(14) NOT NULL UNIQUE,
@@ -130,13 +130,13 @@ const criarTabelas = [
 
 const inserirRegistros = [
 
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Joaquim", "279.654.490-72", "A");',
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Júlia", "143.256.280-02, "A");',
-  'INSERT INTO professor (nome, descricao, cpf, status) VALUES ("Mariana", "161.201.410-06", "I");'
+  'INSERT INTO professor (nome, cpf, status) VALUES ("Joaquim", "279.654.490-72", "A");',
+  'INSERT INTO professor (nome, cpf, status) VALUES ("Júlia", "143.256.280-02", "A");',
+  'INSERT INTO professor (nome, cpf, status) VALUES ("Mariana", "161.201.410-06", "A");'
 ];
 ```
 
-  ### script_test.dart { test\banco\script_test.dart }
+  ### script_test { test\banco\script_test.dart }
 ```dart
 
 import 'package:flutter_test/flutter_test.dart';
@@ -144,7 +144,7 @@ import 'package:flutter_test/flutter_test.dart';
 import 'package:sqflite_common_ffi/sqflite_ffi.dart';
 import 'package:gestao_notas/app/banco/scirpt.dart';
 
-void main() async {
+void main() {
 
   setUpAll ((){
 
@@ -152,34 +152,115 @@ void main() async {
     sqfliteFfiInit();
   });
 
-  test('Teste Script - Criar Tabela', () async {
+  test('Teste Script - CREATE & INSERT', () async {
 
-    var db = await openDatabase(inMemoryDatabasePath);
-    expect(() => criarTabelas.forEach(db.execute), returnsNormally);
+    var db2 = await openDatabase(inMemoryDatabasePath);
+    deleteDatabase(db2.path);
+
+    var db = await openDatabase(inMemoryDatabasePath, version: 1,
+      onCreate: (db, version) {
+        criarTabelas.forEach(db.execute);
+        inserirRegistros.forEach(db.execute);
+      }
+    );
+
+    var list = await db.rawQuery('SELECT * FROM professor');
+    expect(list.length, 3);
   });  
 }
 ```
 
-  ### .. { . }
+  ### conexao { lib\app\banco\sqlite\conexao.dart }
 ```dart
 
+import 'package:sqflite/sqflite.dart';
+import 'package:path/path.dart';
 
+import 'package:gestao_notas/app/banco/scirpt.dart';
+
+class Conexao {
+
+  //Attributes
+  static late Database _db;
+  static bool conexaoCriada = false;
+
+  //Methods
+  static Future<Database> abrir() async {
+
+    if(!conexaoCriada) {
+      
+      var path = join(await getDatabasesPath(), 'banco.db');
+
+      _db = await openDatabase (
+        path,
+        version: 1,
+        onCreate: (db, version) {
+          criarTabelas.forEach(db.execute);
+          inserirRegistros.forEach(db.execute);
+        }
+      );
+      conexaoCriada = true;
+    }
+    return _db;
+  }
+}
 ```
 
-  ### .. { . }
+  ### conexao_test { test\banco\sqlite\conexao_test.dart }
 ```dart
 
+import 'package:flutter_test/flutter_test.dart';
 
+import 'package:gestao_notas/app/banco/sqlite/conexao.dart';
+import 'package:sqflite_common_ffi/sqflite_ffi.dart';
+import 'package:gestao_notas/app/banco/scirpt.dart';
+
+void main() {
+
+  late Database db;
+
+  setUpAll (() async{
+
+    databaseFactory = databaseFactoryFfi;
+    sqfliteFfiInit();
+
+    db = await Conexao.abrir();
+  });
+
+  test('Teste Conexão - CREATE & INSERT', () async {
+
+    var list = await db.rawQuery('SELECT * FROM professor');
+    expect(list.length, 3);
+  });
+}
 ```
 
-  ### .. { . }
+  ### dao_professor { lib\app\banco\sqlite\dao_professor.dart }
 ```dart
 
+import 'package:gestao_notas/app/dominio/interface/i_dao_professor.dart';
+import 'package:gestao_notas/app/dominio/dto/dto_professor.dart';
+import 'package:gestao_notas/app/banco/sqlite/conexao.dart';
+import 'package:sqflite/sqflite.dart';
 
-```
+class DAOProfessor implements IDAOProfessor {
 
-  ### .. { . }
-```dart
+  //Attributes
+  late Database _db;
 
+  //Methods
+  @override
+  Future<DTOProfessor> alterarStatus(DTOProfessor dto) { throw UnimplementedError();}
 
+  @override
+  Future<DTOProfessor> salvar(DTOProfessor dto) async {
+
+    _db = await Conexao.abrir();
+    int id = await _db.rawInsert ( 'INSERT INTO professor (nome, descricao, cpf, status) VALUES (?,?,?,?),',
+      [dto.nome, dto.descricao, dto.CPF, dto.status]);
+
+    dto.id = id;
+    return dto;
+  }
+}
 ```
