Update [24.02] Aula 09.05.md

--- a/[24.02] Aula 09.05.md
+++ b/[24.02] Aula 09.05.md
@@ -264,3 +264,22 @@ class DAOProfessor implements IDAOProfessor {
   }
 }
 ```
+
+  ### a_professor { lib\app\aplicacao\a_professor.dart }
+```dart
+
+import 'package:gestao_notas/app/dominio/interface/i_dao_professor.dart';
+import 'package:gestao_notas/app/dominio/professor.dart';
+
+class AProfessor {
+
+  //Attributes
+  Professor professor;
+  IDAOProfessor dao;
+
+  //Methods
+  AProfessor({required this.professor, required this.dao}){}
+
+  salvar(){ professor.incluir();}
+}
+```
