Update [24.02] Aula 08.29.md

--- a/[24.02] Aula 08.29.md
+++ b/[24.02] Aula 08.29.md
@@ -3,7 +3,7 @@
 
 Aula dedicada ao desenvolvimento do Estudo de Caso! Lista de commits [{ link }](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commits/main/)
 
-Lista e breve descrição dos commits realizados:
+Lista dos commits realizados:
 
   1. [[Initial commit]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/3b35edad2faa70b7c1bcc16cc27e455630ba2165)
   2. [[Criação do Projeto]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/0e2d198403d601a500db437e6f3e0c9a69053932)
