Update [24.02] Aula 09.12.md

--- a/[24.02] Aula 09.12.md
+++ b/[24.02] Aula 09.12.md
@@ -20,7 +20,45 @@ Lista dos commits realizados:
   ### script { planin_me\lib\app\base\script.dart }
 ```dart
 
+const createTables = [
+  '''
+  CREATE TABLE time (
 
+    id_time INTEGER NOT NULL PRIMARY KEY,
+    time DATETIME NOT NULL
+  );
+
+  CREATE TABLE day (
+
+    id_day INTEGER NOT NULL PRIMARY KEY,
+    day_name VARCHAR(50) NOT NULL
+  );
+
+  CREATE TABLE times_a_day (
+
+    
+  );
+
+  CREATE TABLE task (
+
+    id_task INTEGER NOT NULL PRIMARY KEY,
+    name VARCHAR(200) NOT NULL,
+    description VARCHAR(200),
+    priority CHAR(1) NOT NULL,
+    isActive BOOL NOT NULL
+
+
+  );
+  '''
+];
+
+
+const insertData = [
+
+  '',
+  '',
+  '',
+];
 ```
 
   ### script_test { planin_me\test\app\base\script_test.dart }
