Update [24.02] Aula 09.12.md

--- a/[24.02] Aula 09.12.md
+++ b/[24.02] Aula 09.12.md
@@ -6,81 +6,119 @@ Aula dedicada ao desenvolvimento do Estudo de Caso! Lista de commits [{ link }](
 Lista dos commits realizados:
 
   10. [[Criação Estrutural do Script e Test]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/3399adf79882dd4bef6900ed59c6e6857594365d)
-  11. [[]]()
-  12. [[]]()
-  13. [[]]()
-  14. [[]]()
-  15. [[]]()
-  16. [[]]()
-  17. [[]]()
-  18. [[]]()
+  11. [[Script e Test tables TASK e TIMES_A_DAY]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/df44a729831b6714cd9103bb8d592b73d5d64dc0)
+  12. [[Correção de Diretórios]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/3b418c12a2c9638980d9e8a976e1bdfd92aa6504)
+  13. [[Criação do Connexion]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/c0e89c226406ff4e1941529d4e20d4dac7a9c467)
 
 ## Código Desenvolvido
 
-  ### script { planin_me\lib\app\base\script.dart }
+  ### script { planin_me\lib\app\base\sqlite\script.dart }
 ```dart
 
-const createTables = [
+const tableCreate = [
   '''
-  CREATE TABLE time (
-
-    id_time INTEGER NOT NULL PRIMARY KEY,
-    time DATETIME NOT NULL
-  );
-
-  CREATE TABLE day (
-
-    id_day INTEGER NOT NULL PRIMARY KEY,
-    day_name VARCHAR(50) NOT NULL
-  );
-
-  CREATE TABLE times_a_day (
-
-    
-  );
-
   CREATE TABLE task (
 
     id_task INTEGER NOT NULL PRIMARY KEY,
     name VARCHAR(200) NOT NULL,
     description VARCHAR(200),
     priority CHAR(1) NOT NULL,
-    isActive BOOL NOT NULL
-
-
+    is_active BOOL NOT NULL
   );
+  ''',
   '''
+  CREATE TABLE times_a_day (
+
+    id_times_a_day INTEGER NOT NULL PRIMARY KEY,
+    week_day VARCHAR(50) NOT NULL,
+    hour TIME NOT NULL,
+    task_id INT NOT NULL,
+    FOREIGN KEY (task_id) REFERENCES task(id_task)
+  );
+  ''',
 ];
 
-
-const insertData = [
-
-  '',
-  '',
-  '',
+const tableInsert = [
+  
+  'INSERT INTO task (name, priority, is_active) VALUES ("Wake Up", "1", true)',
+  'INSERT INTO times_a_day (week_day, hour, task_id) VALUES ("Sunday", "14:30:00", 1)',
+  'INSERT INTO times_a_day (week_day, hour, task_id) VALUES ("Sunday", "17:30:00", 1)',
+  'INSERT INTO times_a_day (week_day, hour, task_id) VALUES ("Sunday", "20:30:00", 1)',
 ];
 ```
 
-  ### script_test { planin_me\test\app\base\script_test.dart }
+  ### script_test { planin_me\test\app\base\sqlite\script_test.dart }
 ```dart
 
+import 'package:flutter_test/flutter_test.dart';
 
+import 'package:sqflite_common_ffi/sqflite_ffi.dart';
+import 'package:planin_me/app/base/sqlite/script.dart';
+
+void main() {
+  setUpAll(() {
+    databaseFactory = databaseFactoryFfi;
+    sqfliteFfiInit();
+  });
+
+  group('Teste Script [task AND time_a_day]', () {
+
+    test('Teste Script [task] - CREATE & INSERT', () async {
+      var db2 = await openDatabase(inMemoryDatabasePath);
+      deleteDatabase(db2.path);
+
+      var db = await openDatabase(inMemoryDatabasePath, version: 1,
+          onCreate: (db, version) {
+        tableCreate.forEach(db.execute);
+        tableInsert.forEach(db.execute);
+      });
+
+      var list = await db.rawQuery('SELECT * FROM task');
+      expect(list.length, 1);
+    });
+
+    test('Teste Script [times_a_day] - CREATE & INSERT', () async {
+      var db2 = await openDatabase(inMemoryDatabasePath);
+      deleteDatabase(db2.path);
+
+      var db = await openDatabase(inMemoryDatabasePath, version: 1,
+          onCreate: (db, version) {
+        tableCreate.forEach(db.execute);
+        tableInsert.forEach(db.execute);
+      });
+
+      var list = await db.rawQuery('SELECT * FROM times_a_day');
+      expect(list.length, 3);
+    });
+  });
+}
 ```
 
-  ###  {  }
+  ### connexion { planin_me\lib\app\base\sqlite\connexion.dart }
 ```dart
 
+import 'package:sqflite/sqflite.dart';
+import 'package:path/path.dart';
 
-```
+import 'package:planin_me/app/base/sqlite/script.dart';
 
-  ###  {  }
-```dart
+class Connexion {
+  //Attributes
+  static late Database _db;
+  static bool conexaoCriada = false;
 
+  //Methods
+  static Future<Database> abrir() async {
+    if (!conexaoCriada) {
+      var path = join(await getDatabasesPath(), 'banco.db');
 
-```
-
-  ###  {  }
-```dart
-
-
+      _db = await openDatabase(path, version: 1, onCreate: (db, version) {
+        tableCreate.forEach(db.execute);
+        tableInsert.forEach(db.execute);
+      });
+      conexaoCriada = true;
+    }
+    return _db;
+  }
+}
 ```
