Update [24.02] Aula 10.03.md

--- a/[24.02] Aula 10.03.md
+++ b/[24.02] Aula 10.03.md
@@ -8,8 +8,11 @@ Lista dos commits realizados:
   16. [[Renomeações de Task]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/52579130d726c24ad981070c1606ce37b606fd72)
   17. [[Renomeações de Routes]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/46e97225bfd261f24caa6265971b307ecd1cb0c0)
   18. [[DTO e IDAO TimesADay]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/760f6db4e2b5274f5e2cb0f23915b72633abd4de)
-  19. [[]]()
-  20. [[]]()
+  19. [[Ajustes de Task_Test]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/c7b6068ab74d2dd7b3c50048b867e9cf4e71cc94)
+  20. [[Ajustes de Task_Test 2]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/97526b4f3def0a728fab646f9897da0a9cb66b25)
+  21. [[]]()
+  22. [[]]()
+  23. [[]]()
 
 ## Código Desenvolvido
 
@@ -74,6 +77,45 @@ class DTOTask {
     required this.priority,
     this.isActive = true
   });
+}
+```
+
+  ### task_test { planin_me\test\app\domain\task_test.dart }
+```dart
+
+import 'package:flutter_test/flutter_test.dart';
+
+import 'package:planin_me/app/domain/interface/idao_task.dart';
+import 'package:planin_me/app/domain/dto/task_dto.dart';
+import 'package:planin_me/app/domain/task.dart';
+
+void main() {
+  //Attributes
+  late Task task;
+  late DTOTask dto;
+  late DAOTaskFake dao;
+
+  group(['GROUP_Description'], () {
+    setUp(() {
+      dao = DAOTaskFake();
+    });
+
+    test('TEST_Description', () {
+
+      dto = DTOTask(name: "Test", priority: 2);
+      task = Task(dto: dto, dao: dao);
+
+      expect(() => task.save(dto), returnsNormally);
+    });
+  });
+}
+
+//DAOFake
+class DAOTaskFake implements IDAOTask {
+  @override
+  DTOTask save(DTOTask dto) {
+    return dto;
+  }
 }
 ```
 
