Update [24.02] Aula 10.03.md

--- a/[24.02] Aula 10.03.md
+++ b/[24.02] Aula 10.03.md
@@ -10,15 +10,12 @@ Lista dos commits realizados:
   18. [[DTO e IDAO TimesADay]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/760f6db4e2b5274f5e2cb0f23915b72633abd4de)
   19. [[Ajustes de Task_Test]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/c7b6068ab74d2dd7b3c50048b867e9cf4e71cc94)
   20. [[Ajustes de Task_Test 2]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/97526b4f3def0a728fab646f9897da0a9cb66b25)
-  21. [[]]()
-  22. [[]]()
-  23. [[]]()
+  21. [[Adição de Navigators]](https://github.com/rSanches35/ES.24-DDM_PlaninMe/commit/ad0144f9338d861dd8f38114d54b11207294a724)
 
 ## Código Desenvolvido
 
   ### task { planin_me\lib\app\domain\task.dart }
 ```dart
-
 
 import 'package:planin_me/app/domain/interface/idao_task.dart';
 import 'package:planin_me/app/domain/dto/task_dto.dart';
@@ -180,6 +177,7 @@ abstract class IDAOTimesADay {
   DTOTimesADay save(DTOTimesADay dto);
 }
 ```
+
   ### script { planin_me\lib\app\base\sqlite\script.dart }
 ```dart
 
@@ -213,13 +211,6 @@ const tableInsert = [
   'INSERT INTO times_a_day (week_day, time, task_id) VALUES ("Sunday", "17:30:00", 1)',
   'INSERT INTO times_a_day (week_day, time, task_id) VALUES ("Sunday", "20:30:00", 1)',
 ];
-```
-
-
-  ### main { planin_me\lib\main.dart }
-```dart
-
-
 ```
 
   ### my_app { planin_me\lib\my_app.dart }
@@ -269,31 +260,23 @@ class Routes {
   ### task_list { planin_me\lib\widget\task_list.dart }
 ```dart
 
-import 'package:flutter/material.dart';
+import 'dart:math';
 
+import 'package:flutter/gestures.dart';
+import 'package:flutter/material.dart';
+import 'package:planin_me/widget/routes.dart';
 import 'package:planin_me/app/domain/dto/task_dto.dart';
-import 'package:planin_me/app/domain/times_a_day.dart';
+import 'package:planin_me/widget/task_details.dart';
+import 'package:planin_me/widget/task_form.dart';
 
 class TaskList extends StatelessWidget {
   const TaskList({Key? key}) : super(key: key);
 
   Future<List<DTOTask>> consult() async {
     return [
-      DTOTask(
-          name: 'Wake Up',
-          priority: 3,
-          isActive: true,
-          times_a_day: TimesADay()),
-      DTOTask(
-          name: 'Feed Neko',
-          priority: 1,
-          isActive: true,
-          times_a_day: TimesADay()),
-      DTOTask(
-          name: 'Do Laundry',
-          priority: 2,
-          isActive: false,
-          times_a_day: TimesADay()),
+      DTOTask(name: 'Wake Up', priority: 3, isActive: true),
+      DTOTask(name: 'Feed Neko', priority: 1, isActive: true),
+      DTOTask(name: 'Do Laundry', priority: 2, isActive: false),
     ];
   }
 
@@ -302,14 +285,15 @@ class TaskList extends StatelessWidget {
     return Scaffold(
       appBar: AppBar(
         title: Text('Task List'),
+        backgroundColor: Colors.cyan[300],
       ),
       body: FutureBuilder(
         future: consult(),
-        builder: (BuildContext context, AsyncSnapshot<List<DTOTask>> snapshot) {
+        builder:
+          (BuildContext context, AsyncSnapshot<List<DTOTask>> snapshot) {
           var dataList = snapshot.data;
-          if (dataList == null) {
-            return Text('Data not Found');
-          } else {
+          if (dataList == null) { return Text('Data not Found');}
+          else {
             List<DTOTask> list = dataList;
             return ListView.builder(
               itemCount: list.length,
@@ -319,11 +303,22 @@ class TaskList extends StatelessWidget {
                   leading: Icon(Icons.insert_invitation_rounded),
                   title: Text(task.name),
                   subtitle: Text('Priority: ${task.priority}'),
+                  onTap: () => Navigator.push( context,
+                    MaterialPageRoute(builder: (context) => const TaskDetails()),
+                  ),
                 );
               },
             );
           }
         },
+      ),
+      floatingActionButton: IconButton(
+        icon: Icon(Icons.add),
+        color: Colors.cyan[700],
+        iconSize: 30,
+        onPressed: () => Navigator.push( context,
+          MaterialPageRoute(builder: (context) => const TaskForm()),
+        ),
       ),
     );
   }
